--- a/DichVu.html
+++ b/DichVu.html
@@ -64,7 +64,7 @@
                     <img src="img/logo1.jpg" alt="Logo" class="img-fluid logo">
                 </div>
                 <div class="col-md-10 col-8">
-                    <h1 class="h3 h-md-1">Dịch Vụ Thuê Xe Máy NGỌC VINH</h1>
+                    <h1 class="h3 h-md-1">Dịch Vụ Thuê Xe Máy Cần Thơ</h1>
                     <p>Thuê xe máy nhanh chóng, tiện lợi và giá rẻ</p>
                 </div>
             </div>
