--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
         body {
-            padding-top: 56px;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
+            font-family: 'Arial', sans-serif;
         }
 
         .wrapper {
@@ -22,6 +22,32 @@
         .navbar-brand img {
             height: 40px;
         }
+        .navbar {
+            background-color: #343a40; /* Dark gray background */
+        }
+
+        .navbar-brand {
+            display: flex;
+            align-items: center;
+        }
+
+        .navbar-brand img {
+            margin-right: 10px; /* Adjust the space between the logo and the text */
+        }
+
+        .brand-text {
+            font-family: 'Arial', sans-serif; /* Change to your preferred font */
+            font-size: 1.5rem; /* Adjust the size as needed */
+            font-weight: bold; /* Make the text bold */
+            color: #f8d210; /* Bright yellow color for contrast */
+            text-transform: uppercase; /* Make the text uppercase */
+            letter-spacing: 1px; /* Adjust the space between letters */
+        }
+
+        .navbar-brand:hover .brand-text {
+            color: #ffdd57; /* Lighter yellow on hover */
+        }
+
 
         .hero-section {
             background: url('img/hero-bg.jpg') no-repeat center center;
@@ -37,6 +63,10 @@
         .hero-section h1 {
             font-size: 3rem;
             font-weight: bold;
+        }
+
+        .hero-section p {
+            font-size: 1.2rem;
         }
 
         .card-header {
@@ -114,6 +144,42 @@
         p {
             text-align: justify;
         }
+
+        h2 {
+            margin-top: 20px;
+            margin-bottom: 20px;
+            font-weight: bold;
+        }
+
+        .list-unstyled li {
+            margin-bottom: 10px;
+        }
+
+        .pricing-section ul {
+            list-style: none;
+            padding-left: 0;
+        }
+
+        .pricing-section li::before {
+            content: "\f00c";
+            font-family: "Font Awesome 5 Free";
+            font-weight: 900;
+            margin-right: 10px;
+            color: green;
+        }
+
+        .list-section ul {
+            list-style: none;
+            padding-left: 0;
+        }
+
+        .list-section li::before {
+            content: "\f00c";
+            font-family: "Font Awesome 5 Free";
+            font-weight: 900;
+            margin-right: 10px;
+            color: green;
+        }
     </style>
 </head>
 
@@ -121,7 +187,10 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/logo1.jpg" alt="Logo"> Dịch Vụ Thuê Xe Máy Cần Thơ</a>
+            <a class="navbar-brand" href="#">
+                <img src="img/logo1.jpg" alt="Logo">
+                <span class="brand-text">Dịch Vụ Thuê Xe Máy Cần Thơ</span>
+            </a>            
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -130,9 +199,6 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Trang Chủ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#gioithieu">Giới Thiệu</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="DichVu.html">Dịch Vụ</a>
@@ -168,38 +234,123 @@
                 </div>
             </div>
 
+            <!-- Additional Content -->
             <div class="row mt-5">
                 <div class="col-md-12">
-                    <h2 class="text-center mb-4" id="dichvu"><i class="fas fa-concierge-bell"></i> Dịch Vụ</h2>
-                    <div class="row justify-content-center">
-                        <div class="col-md-6">
-                            <div class="card mb-4 shadow-sm">
-                                <div class="card-header">
-                                    <h4 class="my-0 font-weight-normal">Dịch Vụ Thuê Xe</h4>
-                                </div>
-                                <div class="card-body">
-                                    <form>
-                                        <div class="form-group">
-                                            <label for="date">Chọn ngày thuê:</label>
-                                            <input type="date" id="date" class="form-control">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="type">Loại xe:</label>
-                                            <select id="type" class="form-control">
-                                                <option value="scooter">Xe số</option>
-                                                <option value="motorbike">Xe tay ga</option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="price">Giá tiền:</label>
-                                            <input type="text" id="price" class="form-control" value="500,000 VND" readonly>
-                                        </div>
-                                        <p class="card-text">Mô tả dịch vụ. Các lợi ích và đặc điểm của dịch vụ này.</p>
-                                        <button type="button" class="btn btn-lg btn-block btn-primary" href="DichVu.html">Xem Chi Tiết</button>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
+                    <h2 class="text-center mb-4" id="dichvu"><i class="fas fa-concierge-bell"></i> Thuê xe máy Cần Thơ | Giá Rẻ 100k/Ngày, Thủ Tục Đơn Giản</h2>
+                    <p>Nhu cầu thuê xe máy Cần Thơ ngày càng tăng cao do khách du lịch đổ về thành phố này ngày một đông hơn. Bên cạnh đó, việc di chuyển bằng xe máy tự lái cũng tiện lợi và rẻ hơn rất nhiều so với các loại hình di chuyển khác khiến nhiều khách hàng còn thêm hứng thú. Nắm bắt được xu hướng này, Mekongtours chính thức ra mắt dịch vụ cho thuê xe máy chất lượng cao với thủ tục thuê xe nhanh chóng, giá cạnh tranh, đảm bảo mang đến cho bạn những trải nghiệm tuyệt vời nhất.</p>
+                    <p>Mekongtours cũng là thương hiệu TOP 1 trong lĩnh vực thuê xe du lịch tại Cần Thơ. Vì vậy, việc có mặt của brand này trong mảng thuê xe máy còn khiến thị trường thêm sôi động.</p>
+                    <p>Để hiểu rõ hơn về dịch vụ cho thuê xe máy Cần Thơ, mời bạn tham khảo bài viết dưới đây:</p>
+
+                    <div class="pricing-section">
+                        <h3>Bảng giá thuê xe máy Cần Thơ mới nhất 2024</h3>
+                        <h4>Bảng giá thuê xe máy Cần Thơ 1 ngày</h4>
+                        <ul class="list-unstyled">
+                            <li>Thuê xe máy Honda Airblade (2021) 130.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yamaha Nouvo LX 120.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Honda Lead 120.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Honda Vision (2021) 130.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yamaha Sirius (2021) 100.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Wave RSX (2021) 100.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yahama Exciter 135 130.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yamaha Jupiter (2021) 100.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yamaha Exciter 150 150.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yamaha NVX 150.000 VNĐ/ngày</li>
+                        </ul>
+                        <h4>Bảng giá thuê xe máy Cần Thơ 3 ngày</h4>
+                        <ul class="list-unstyled">
+                            <li>Thuê xe máy Honda Airblade (2021) 110.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yamaha Nouvo LX 100.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Honda Lead 110.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Honda Vision (2021) 110.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yamaha Sirius (2021) 90.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Wave RSX (2021) 90.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yahama Exciter 135 110.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yamaha Jupiter (2021) 90.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yamaha Exciter 150 130.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yamaha NVX 140.000 VNĐ/ngày</li>
+                        </ul>
+                        <h4>Bảng giá thuê xe máy Cần Thơ 5 ngày</h4>
+                        <ul class="list-unstyled">
+                            <li>Thuê xe máy Honda Airblade (2021) 100.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yamaha Nouvo LX 90.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Honda Lead 100.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Honda Vision (2021) 100.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yamaha Sirius (2021) 80.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Wave RSX (2021) 80.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yahama Exciter 135 100.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yamaha Jupiter (2021) 80.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yamaha Exciter 150 120.000 VNĐ/ngày</li>
+                            <li>Thuê xe máy Yamaha NVX 140.000 VNĐ/ngày</li>
+                        </ul>
+                        <p><strong>Lưu ý bảng giá thuê xe máy Cần Thơ:</strong></p>
+                        <ul class="list-unstyled">
+                            <li>Bảng giá thuê xe máy Cần Thơ trên chưa bao gồm phí VAT. Nếu bạn cần xuất hóa đơn thì cộng thêm 10% phí.</li>
+                            <li>Chi phí xăng xe không được bao gồm trong bảng giá trên. Điều đó đồng nghĩa với việc bạn tự thanh toán tiền xăng cho quá trình di chuyển của mình.</li>
+                        </ul>
+                    </div>
+
+                    <div class="benefits-section">
+                        <h3>Lý do tại sao bạn nên thuê xe máy Cần Thơ?</h3>
+                        <p>Xe máy vẫn là phương tiện di chuyển phổ biến tại Việt Nam. Ưu điểm của dòng xe này là nhỏ gọn, có thể luồn lách vào từng con hẻm nhỏ tại Cần Thơ, điều mà ô tô khó có thể làm được. Chưa hết, chi phí thuê xe máy Cần Thơ cũng rẻ hơn 1/6 so với thuê xe ô tô hay book taxi. Chình vì điều này, mà nhiều bạn dễ dàng có được phương tiện di chuyển tại Cần Thơ mà không cần bận tâm quá nhiều về chi phí.</p>
+                    </div>
+
+                    <div class="service-section">
+                        <h3>Giới thiệu dịch vụ cho thuê xe máy giá rẻ tại Cần Thơ</h3>
+                        <p>Không khó để bạn tìm kiếm dịch vụ cho thuê xe máy Cần Thơ. Tuy nhiên, không phải sự lựa chọn nào cũng là tốt nhất. Đặc biệt, đối với những bạn lần đầu thuê xe tự lái thì việc chọn những công ty uy tín là điều cần thiết. Bởi nó giúp bạn cảm thấy yên tâm hơn trong quá trình thuê xe.</p>
+                    </div>
+
+                    <div class="criteria-section">
+                        <h3>Tiêu chí để đánh giá một công ty cho thuê xe máy tại Cần Thơ uy tín, chất lượng</h3>
+                        <ul class="list-unstyled">
+                            <li>Dựa vào lượt đánh giá của khách hàng</li>
+                            <li>Công khai bảng giá cho thuê xe máy Cần Thơ</li>
+                            <li>Dịch vụ chăm sóc khách hàng chuyên nghiệp</li>
+                        </ul>
+                    </div>
+
+                    <div class="mekongtours-section">
+                        <h3>Mekongtours – TOP 1 công ty cho thuê xe máy Cần Thơ</h3>
+                        <p>Mekongtours là thương hiệu lâu năm trong lĩnh vực cho thuê xe tự lái Cần Thơ. Dịch vụ của chúng tôi được nhiều khách hàng yêu thích bởi:</p>
+                        <ul class="list-unstyled">
+                            <li>Chúng tôi cung cấp dàn xe máy chất lượng cao, đa dạng mẫu mã, bao gồm: xe số, xe AB, vespa, SH,…cho khách hàng tha hồ lựa chọn.</li>
+                            <li>Thủ tục thuê xe máy nhanh chóng, có thể booking online mà không cần đến trực tiếp cửa hàng.</li>
+                            <li>Giao xe tận nơi không tốn phí, bất kể ngày lễ, thứ bảy hay chủ nhật. Chúng tôi để sẵn sàng phục vụ bạn.</li>
+                            <li>Xe được vệ sinh sạch sẽ trước khi giao cho bạn.</li>
+                            <li>Tình trạng xe còn rất mới, do đó bạn không lo bị lỗi trong quá trình hoạt động.</li>
+                            <li>Đặc biệt, bạn có thể sử dụng dịch vụ thuê xe máy Cần Thơ mà không cần đặt cọc trước. Bạn chỉ thanh toán sau khi hoàn tất quá trình thuê xe.</li>
+                        </ul>
+                    </div>
+
+                    <div class="notes-section">
+                        <h3>Những lưu ý khi thuê xe máy Cần Thơ mà bạn nên ghi nhớ</h3>
+                        <ul class="list-unstyled">
+                            <li>Bạn nên booking trước 3-5 ngày đi du lịch chắc chắn việc đặt xe đã thành công.</li>
+                            <li>Nếu bạn di chuyển xa, bạn nên ưu tiên dòng xe 150cc để đi thỏa mái hơn.</li>
+                            <li>Trước khi nhận xe, bạn nên kiểm tra kỹ ngoại hình, tình trạng hoạt động của xe. Nếu xe có bất vấn đề gì thì hãy báo ngay với công ty cho thuê xe để có phương án thay thế.</li>
+                            <li>Nên lựa chọn dịch vụ thuê xe máy của các công ty uy tín để tránh các trường hợp “tiền mất tật mang”.</li>
+                            <li>Không nên chọn những dòng xe quá cũ để tránh trường hợp hao xăng hoặc lỗi vặt trong quá trình di chuyển.</li>
+                        </ul>
+                    </div>
+
+                    <div class="faq-section">
+                        <h3>Trả lời những thắc mắc khi thuê xe máy Cần Thơ</h3>
+                        <p><strong>1. Chi phí thuê xe máy được tính như thế nào?</strong></p>
+                        <p>Chi phí thuê xe máy được tính theo ngày. Tức là bạn nhận xe vào thời gian nào thì sẽ tính vào cuối ngày hôm đó.</p>
+
+                        <p><strong>2. Có cần đặt cọc gì không?</strong></p>
+                        <p>Thuê xe máy tại Mekongtours, bạn không cần phải đặt cọc. Bạn chỉ thanh toán sau khi trả xe hoặc ngừng sử dụng dịch vụ.</p>
+
+                        <p><strong>3. Xe tình trạng còn mới và hoạt động tốt chứ, nếu có sự cố gì thì sẽ giải quyết như thế nào?</strong></p>
+                        <p>Mekongtours cam kết xe vẫn còn mới, tình trạng hoạt động rất tốt và xảy ra bất kỳ lỗi vặt nào. Tuy nhiên, trong trường hợp bạn gặp sự cố thì hãy liên hệ với chúng tôi:</p>
+                    </div>
+
+                    <div class="contact-section">
+                        <h3>LIÊN HỆ THUÊ XE MÁY CẦN THƠ</h3>
+                        <p><strong>CÔNG TY TNHH MEKONGTOURS</strong></p>
+                        <p>Hotline: 0789.506.565</p>
+                        <p>Website: <a href="https://canthooto.com/thue-xe-can-tho" target="_blank">https://canthooto.com/thue-xe-can-tho</a></p>
+                        <p>Địa chỉ: 2 Mậu Thân, An Hòa, Ninh Kiều, Cần Thơ</p>
                     </div>
                 </div>
             </div>
@@ -208,13 +359,31 @@
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2024 Dịch Vụ Thuê Xe Máy NGỌC VINH. All rights reserved.</p>
-        <button id="back-to-top">Lên đầu trang</button>
+        <div class="container">
+            <p>&copy; 2024 Dịch Vụ Thuê Xe Máy NGỌC VINH. All rights reserved.</p>
+            <button id="back-to-top" class="btn btn-primary"><i class="fas fa-arrow-up"></i> Back to Top</button>
+        </div>
     </footer>
 
+    <!-- Bootstrap and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        $(document).scroll(function () {
+            var y = $(this).scrollTop();
+            if (y > 800) {
+                $('#back-to-top').fadeIn();
+            } else {
+                $('#back-to-top').fadeOut();
+            }
+        });
+
+        $('#back-to-top').click(function () {
+            $('html, body').animate({ scrollTop: 0 }, 'slow');
+            return false;
+        });
+    </script>
 </body>
 
 </html>
