--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dịch Vụ Thuê Xe Máy NGỌC VINH</title>
+    <link rel="icon" href="img/logo2.jpg">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
@@ -240,7 +241,7 @@
                 <div class="col-md-12">
                     <h2 class="text-center mb-4" id="dichvu"><i class="fas fa-concierge-bell"></i> Thuê xe máy Cần Thơ | Giá Rẻ 100k/Ngày, Thủ Tục Đơn Giản</h2>
                     <p>Nhu cầu thuê xe máy Cần Thơ ngày càng tăng cao do khách du lịch đổ về thành phố này ngày một đông hơn. Bên cạnh đó, việc di chuyển bằng xe máy tự lái cũng tiện lợi và rẻ hơn rất nhiều so với các loại hình di chuyển khác khiến nhiều khách hàng còn thêm hứng thú. Nắm bắt được xu hướng này, Mekongtours chính thức ra mắt dịch vụ cho thuê xe máy chất lượng cao với thủ tục thuê xe nhanh chóng, giá cạnh tranh, đảm bảo mang đến cho bạn những trải nghiệm tuyệt vời nhất.</p>
-                    <p>Mekongtours cũng là thương hiệu TOP 1 trong lĩnh vực thuê xe du lịch tại Cần Thơ. Vì vậy, việc có mặt của brand này trong mảng thuê xe máy còn khiến thị trường thêm sôi động.</p>
+                    <p>Travel With Amina cũng là thương hiệu TOP 1 trong lĩnh vực thuê xe du lịch tại Cần Thơ. Vì vậy, việc có mặt của brand này trong mảng thuê xe máy còn khiến thị trường thêm sôi động.</p>
                     <p>Để hiểu rõ hơn về dịch vụ cho thuê xe máy Cần Thơ, mời bạn tham khảo bài viết dưới đây:</p>
 
                     <div class="pricing-section">
@@ -311,8 +312,8 @@
                     </div>
 
                     <div class="mekongtours-section">
-                        <h3>Mekongtours – TOP 1 công ty cho thuê xe máy Cần Thơ</h3>
-                        <p>Mekongtours là thương hiệu lâu năm trong lĩnh vực cho thuê xe tự lái Cần Thơ. Dịch vụ của chúng tôi được nhiều khách hàng yêu thích bởi:</p>
+                        <h3>Travel With Amina – TOP 1 công ty cho thuê xe máy Cần Thơ</h3>
+                        <p>Travel With Amina là thương hiệu lâu năm trong lĩnh vực cho thuê xe tự lái Cần Thơ. Dịch vụ của chúng tôi được nhiều khách hàng yêu thích bởi:</p>
                         <ul class="list-unstyled">
                             <li>Chúng tôi cung cấp dàn xe máy chất lượng cao, đa dạng mẫu mã, bao gồm: xe số, xe AB, vespa, SH,…cho khách hàng tha hồ lựa chọn.</li>
                             <li>Thủ tục thuê xe máy nhanh chóng, có thể booking online mà không cần đến trực tiếp cửa hàng.</li>
@@ -340,7 +341,7 @@
                         <p>Chi phí thuê xe máy được tính theo ngày. Tức là bạn nhận xe vào thời gian nào thì sẽ tính vào cuối ngày hôm đó.</p>
 
                         <p><strong>2. Có cần đặt cọc gì không?</strong></p>
-                        <p>Thuê xe máy tại Mekongtours, bạn không cần phải đặt cọc. Bạn chỉ thanh toán sau khi trả xe hoặc ngừng sử dụng dịch vụ.</p>
+                        <p>Thuê xe máy tại Travel With Amina, bạn không cần phải đặt cọc. Bạn chỉ thanh toán sau khi trả xe hoặc ngừng sử dụng dịch vụ.</p>
 
                         <p><strong>3. Xe tình trạng còn mới và hoạt động tốt chứ, nếu có sự cố gì thì sẽ giải quyết như thế nào?</strong></p>
                         <p>Mekongtours cam kết xe vẫn còn mới, tình trạng hoạt động rất tốt và xảy ra bất kỳ lỗi vặt nào. Tuy nhiên, trong trường hợp bạn gặp sự cố thì hãy liên hệ với chúng tôi:</p>
@@ -348,9 +349,9 @@
 
                     <div class="contact-section">
                         <h3>LIÊN HỆ THUÊ XE MÁY CẦN THƠ</h3>
-                        <p><strong>CÔNG TY TNHH MEKONGTOURS</strong></p>
+                        <p><strong>CÔNG TY TNHH TRAVEL WITH AMINA</strong></p>
                         <p>Hotline: 0789.506.565</p>
-                        <p>Website: <a href="https://canthooto.com/thue-xe-can-tho" target="_blank">https://canthooto.com/thue-xe-can-tho</a></p>
+                        <p>Website: <a href="#" target="_blank">https://canthooto.com/thue-xe-can-tho</a></p>
                         <p>Địa chỉ: 2 Mậu Thân, An Hòa, Ninh Kiều, Cần Thơ</p>
                     </div>
                 </div>
