--- a/DichVu.html
+++ b/DichVu.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thông Tin Khách Hàng</title>
-    <link rel="icon" href="img/logo3.png">
+    <title>Dịch Vụ Xe Máy</title>
+    <link rel="icon" href="img/logo2.jpg">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         html, body {
             height: 100%;
@@ -39,40 +39,97 @@
             right: 20px;
             z-index: 1000;
         }
-        .header-orange {
-            position: relative; /* Đặt vị trí của header là relative */
-            z-index: 1; /* Đặt z-index của header là 1 */
-        }
 
         #customer-info {
-            margin-top: 90px; /* Thêm margin-top để dịch chuyển form icon xuống dưới */
+            margin-top: 90px;
             padding: 20px;
             background-color: #f8f9fa;
             border: 1px solid #ced4da;
             border-radius: 5px;
         }
 
+        .navbar-brand img {
+            height: 30px;
+        }
+
+        .navbar {
+            background-color: #343a40;
+        }
+
+        .navbar-brand {
+            display: flex;
+            align-items: center;
+        }
+
+        .navbar-brand img {
+            margin-right: 10px;
+        }
+
+        .brand-text {
+            font-family: 'Arial', sans-serif;
+            font-size: 1.2rem;
+            font-weight: bold;
+            color: #f8d210;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .navbar-brand:hover .brand-text {
+            color: #ffdd57;
+        }
+
+        .hero-section {
+            background: url('img/hero-bg.jpg') no-repeat center center;
+            background-size: cover;
+            height: 70vh;
+            color: white;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .hero-section h1 {
+            font-size: 3rem;
+            font-weight: bold;
+        }
+
+        .hero-section p {
+            font-size: 1.2rem;
+        }
     </style>
 </head>
 
 <body>
-    <!-- Include header here -->
-    <header class="header-orange text-white text-center">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-2 col-4">
-                    <img src="img/logo1.jpg" alt="Logo" class="img-fluid logo">
-                </div>
-                <div class="col-md-10 col-8">
-                    <h1 class="h3 h-md-1">Dịch Vụ Thuê Xe Máy Cần Thơ</h1>
-                    <p>Thuê xe máy nhanh chóng, tiện lợi và giá rẻ</p>
-                </div>
+            <a class="navbar-brand" href="#">
+                <img src="img/logo1.jpg" alt="Logo">
+                <span class="brand-text">Dịch Vụ Thuê Xe Máy Cần Thơ</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Trang Chủ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="DichVu.html">Dịch Vụ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="LienHe.html">Liên Hệ</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </header>
+    </nav>
 
-    
-    <div class="container">
+    <!-- Wrapper -->
+    <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6 text-center" id="customer-info">
                 <h2>Lựa Chọn Xe</h2>
@@ -94,11 +151,15 @@
             </div>
         </div>
     </div>
+
     <footer class="bg-light text-center py-3">
         <p>&copy; 2023 Dịch Vụ Thuê Xe Máy Cần Thơ. All rights reserved.</p>
     </footer>
-    
 
+    <!-- Bootstrap and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
