--- a/LienHe.html
+++ b/LienHe.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liên Hệ</title>
-    <link rel="icon" href="img/logo3.png">
+    <link rel="icon" href="img/logo2.jpg">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -130,40 +130,68 @@
             color: white;
         }
 
-        header {
-            background-image: linear-gradient(to right, #434343 0%, black 100%);
-            color: white;
-            padding: 20px 0;
-        }
-
-        header .logo {
-            max-width: 100px;
-        }
-
         .map-container {
             margin-top: 30px;
+        }
+
+        .navbar {
+            background-color: #343a40;
+        }
+
+        .navbar-brand {
+            display: flex;
+            align-items: center;
+        }
+
+        .navbar-brand img {
+            margin-right: 10px;
+            height: 30px;
+        }
+
+        .brand-text {
+            font-family: 'Arial', sans-serif;
+            font-size: 1.2rem;
+            font-weight: bold;
+            color: #f8d210;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .navbar-brand:hover .brand-text {
+            color: #ffdd57;
         }
     </style>
 </head>
 
 <body>
-    <header class="header-orange text-white text-center">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-2 col-4">
-                    <a href="trangchu.html">
-                        <img src="img/logo1.jpg" alt="Logo" class="img-fluid logo">
-                    </a>
-                </div>
-                <div class="col-md-10 col-8">
-                    <h1 class="h3 h-md-1">Dịch Vụ Thuê Xe Máy NGỌC VINH</h1>
-                    <p>Thuê xe máy nhanh chóng, tiện lợi và giá rẻ</p>
-                </div>
+            <a class="navbar-brand" href="#">
+                <img src="img/logo1.jpg" alt="Logo">
+                <span class="brand-text">Dịch Vụ Thuê Xe Máy Cần Thơ</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Trang Chủ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="DichVu.html">Dịch Vụ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="LienHe.html">Liên Hệ</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </header>
+    </nav>
 
-    <div class="content">
+    <div class="content mt-5"> <!-- Thêm lớp mt-5 -->
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
