--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 </div>
                 <div class="col-md-6">
                     <h2 class="text-center mb-4" id="gioithieu"><i class="fas fa-info-circle"></i> Giới Thiệu</h2>
-                    <p>Dịch vụ thuê xe máy NGỌC VINH cung cấp các loại xe chất lượng cao, giá cả hợp lý và dịch vụ chăm sóc khách hàng tuyệt vời. Chúng tôi luôn đặt sự hài lòng của khách hàng lên hàng đầu.</p>
+                    <p>Dịch vụ thuê xe máy TRAVEL WITH AMINA cung cấp các loại xe chất lượng cao, giá cả hợp lý và dịch vụ chăm sóc khách hàng tuyệt vời. Chúng tôi luôn đặt sự hài lòng của khách hàng lên hàng đầu.</p>
                 </div>
             </div>
 
@@ -240,7 +240,7 @@
             <div class="row mt-5">
                 <div class="col-md-12">
                     <h2 class="text-center mb-4" id="dichvu"><i class="fas fa-concierge-bell"></i> Thuê xe máy Cần Thơ | Giá Rẻ 100k/Ngày, Thủ Tục Đơn Giản</h2>
-                    <p>Nhu cầu thuê xe máy Cần Thơ ngày càng tăng cao do khách du lịch đổ về thành phố này ngày một đông hơn. Bên cạnh đó, việc di chuyển bằng xe máy tự lái cũng tiện lợi và rẻ hơn rất nhiều so với các loại hình di chuyển khác khiến nhiều khách hàng còn thêm hứng thú. Nắm bắt được xu hướng này, Mekongtours chính thức ra mắt dịch vụ cho thuê xe máy chất lượng cao với thủ tục thuê xe nhanh chóng, giá cạnh tranh, đảm bảo mang đến cho bạn những trải nghiệm tuyệt vời nhất.</p>
+                    <p>Nhu cầu thuê xe máy Cần Thơ ngày càng tăng cao do khách du lịch đổ về thành phố này ngày một đông hơn. Bên cạnh đó, việc di chuyển bằng xe máy tự lái cũng tiện lợi và rẻ hơn rất nhiều so với các loại hình di chuyển khác khiến nhiều khách hàng còn thêm hứng thú. Nắm bắt được xu hướng này, Travel With Amina chính thức ra mắt dịch vụ cho thuê xe máy chất lượng cao với thủ tục thuê xe nhanh chóng, giá cạnh tranh, đảm bảo mang đến cho bạn những trải nghiệm tuyệt vời nhất.</p>
                     <p>Travel With Amina cũng là thương hiệu TOP 1 trong lĩnh vực thuê xe du lịch tại Cần Thơ. Vì vậy, việc có mặt của brand này trong mảng thuê xe máy còn khiến thị trường thêm sôi động.</p>
                     <p>Để hiểu rõ hơn về dịch vụ cho thuê xe máy Cần Thơ, mời bạn tham khảo bài viết dưới đây:</p>
 
@@ -344,7 +344,7 @@
                         <p>Thuê xe máy tại Travel With Amina, bạn không cần phải đặt cọc. Bạn chỉ thanh toán sau khi trả xe hoặc ngừng sử dụng dịch vụ.</p>
 
                         <p><strong>3. Xe tình trạng còn mới và hoạt động tốt chứ, nếu có sự cố gì thì sẽ giải quyết như thế nào?</strong></p>
-                        <p>Mekongtours cam kết xe vẫn còn mới, tình trạng hoạt động rất tốt và xảy ra bất kỳ lỗi vặt nào. Tuy nhiên, trong trường hợp bạn gặp sự cố thì hãy liên hệ với chúng tôi:</p>
+                        <p>Travel With Amina cam kết xe vẫn còn mới, tình trạng hoạt động rất tốt và xảy ra bất kỳ lỗi vặt nào. Tuy nhiên, trong trường hợp bạn gặp sự cố thì hãy liên hệ với chúng tôi:</p>
                     </div>
 
                     <div class="contact-section">
@@ -362,7 +362,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
         <div class="container">
-            <p>&copy; 2024 Dịch Vụ Thuê Xe Máy NGỌC VINH. All rights reserved.</p>
+            <p>&copy; 2024 Dịch Vụ Thuê Xe Travel With Amina. All rights reserved.</p>
             <button id="back-to-top" class="btn btn-primary"><i class="fas fa-arrow-up"></i> Back to Top</button>
         </div>
     </footer>
