--- a/xetayga.html
+++ b/xetayga.html
@@ -113,11 +113,11 @@
             <div class="row align-items-center">
                 <div class="col-md-2 col-4">
                     <a href="trangchu.html">
-                        <img src="img/logo1.jpg" alt="Logo" class="img-fluid logo">
+                        <img src="img/logor.jpg" style="border-radius: 90%;" class="img-fluid logo">
                     </a>
                 </div>
                 <div class="col-md-10 col-8">
-                    <h1 class="h3 h-md-1">Dịch Vụ Thuê Xe Máy NGỌC VINH</h1>
+                    <h1 class="h3 h-md-1">Dịch Vụ Thuê Xe Máy Cần Thơ</h1>
                     <p>Thuê xe máy nhanh chóng, tiện lợi và giá rẻ</p>
                 </div>
             </div>
