--- a/LienHe.html
+++ b/LienHe.html
@@ -168,7 +168,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="img/logo1.jpg" alt="Logo">
+                <img src="img/logor.jpg" style="border-radius: 90%;" alt="Logo">
                 <span class="brand-text">Dịch Vụ Thuê Xe Máy Cần Thơ</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
