--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dịch Vụ Thuê Xe Máy NGỌC VINH</title>
+    <title>Dịch Vụ Thuê Xe Máy Cần Thơ</title>
     <link rel="icon" href="img/logo2.jpg">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -190,7 +190,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="img/logo1.jpg" alt="Logo">
+                <img src="img/logor.jpg" style="border-radius: 90%;" alt="Logo">
                 <span class="brand-text">Dịch Vụ Thuê Xe Máy Cần Thơ</span>
             </a>            
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
